# baumanka

./: README.md
2_sem/PTP/lab4/task/: CMakeLists.txt  build_apps.sh  clean.sh  go.sh  make_postproc.py  make_preproc.py  metrics.c  rse.py  types.h  update_data.sh
2_sem/PTP/lab4/task/experiment_1/: main_in.c  main_out.c  main_ticks.c
2_sem/PTP/lab4/task/experiment_2/: main_in.c  main_out.c  main_ticks.c
2_sem/PTP/lab4/task/experiment_3/: main_in.c  main_out.c  main_ticks.c
2_sem/c/: Вопросы лаба1.docx  Вопросы лаба2.docx  Вопросы лаба3.docx  Вопросы лаба4.docx  Вопросы лаба5.docx  Прога экзамен.docx
2_sem/c/lab_01_01/: main.c
2_sem/c/lab_01_02_03/: main.c  run.sh
2_sem/c/lab_01_03_03/: build_debug.sh  main.c
2_sem/c/lab_01_04_03/: main.c
2_sem/c/lab_01_05_03/: main.c
2_sem/c/lab_01_06_03/: build_debug_msan.sh  main.c
2_sem/c/lab_04_01/: main.c  (+3 more)
2_sem/history/: История.docx
3_sem/tisd/: 00_lection.pptx  arithmetic.c  build_unit_tests.sh  long_nums.h  main_unit_tests.c
3_sem/tisd/lab2/: CMakeLists.txt  clean.sh  key_table_funcs.c  key_table_funcs.h  keys.csv  main.c  original_table_funcs.c  original_table_funcs.h  subscriber_funcs.c  subscriber_funcs.h  subscribers.csv  subscribers_save.csv  time_sorts.c  time_sorts.h
3_sem/tisd/lab5/: CMakeLists.txt
3_sem/tisd/lab5/inc/: arr_queue.h  efficiency.h  list_queue.h  modeling.h  request.h
3_sem/tisd/lab5/src/: arr_queue.c  efficiency.c  list_queue.c  main.c  modeling.c
3_sem/tisd/lab7/: CMakeLists.txt  clear.sh  start.sh
3_sem/tisd/lab7/inc/: avl_tree.h  bst_tree.h  efficiency.h  hash_table.h
3_sem/tisd/lab7/src/: avl_tree.c  bst_tree.c  efficiency.c  hash_table.c  main.c  ui.c
(+388 files in other folders)
